// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer/> should render a <Drawer/> components 1`] = `
<div>
  <div
    class="cuke-drawer-mask cuke-drawer-mask-show"
  />
  <div
    class="cuke-drawer-wrap cuke-drawer-wrap-visible"
    tabindex="-1"
  >
    <div
      class="cuke-drawer cuke-drawer-open cuke-drawer-right"
      style="width:300px;height:100%;z-index:999"
    >
      <section
        class="cuke-drawer-header"
      >
        <h2
          class="cuke-drawer-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-drawer-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-drawer-content"
      >
        <span>
          基本使用
        </span>
      </section>
    </div>
  </div>
  <div
    class="cuke-drawer-mask cuke-drawer-mask-show"
  />
  <div
    class="cuke-drawer-wrap cuke-drawer-wrap-visible"
    tabindex="-1"
  >
    <div
      class="cuke-drawer cuke-drawer-open cuke-drawer-right"
      style="width:500px;height:100%;z-index:999"
    >
      <section
        class="cuke-drawer-header"
      >
        <h2
          class="cuke-drawer-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-drawer-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-drawer-content"
      >
        <span>
          无 footer
        </span>
      </section>
    </div>
  </div>
  <div
    class="cuke-drawer-mask cuke-drawer-mask-show"
  />
  <div
    class="cuke-drawer-wrap cuke-drawer-wrap-visible"
    tabindex="-1"
  >
    <div
      class="cuke-drawer cuke-drawer-open cuke-drawer-right"
      style="width:500px;height:100%;z-index:9999"
    >
      <section
        class="cuke-drawer-header"
      >
        <h2
          class="cuke-drawer-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-drawer-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-drawer-content"
      >
        <span>
          无 footer
        </span>
      </section>
    </div>
  </div>
</div>
`;

exports[`<Drawer/> should render custom direction 1`] = `
<div>
  <div
    class="cuke-drawer-mask cuke-drawer-mask-show"
  />
  <div
    class="cuke-drawer-wrap cuke-drawer-wrap-visible"
    tabindex="-1"
  >
    <div
      class="cuke-drawer cuke-drawer-open cuke-drawer-no-title cuke-drawer-left"
      style="width:300px;height:100%;z-index:999"
    >
      <section
        class="cuke-drawer-header"
      >
        <h2
          class="cuke-drawer-title"
        />
        <svg
          class="cuke-drawer-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-drawer-content"
      >
        <span>
          关闭回调
        </span>
      </section>
    </div>
  </div>
  <div
    class="cuke-drawer-mask cuke-drawer-mask-show"
  />
  <div
    class="cuke-drawer-wrap cuke-drawer-wrap-visible"
    tabindex="-1"
  >
    <div
      class="cuke-drawer cuke-drawer-open cuke-drawer-no-title cuke-drawer-top"
      style="width:300px;height:300px;z-index:999"
    >
      <section
        class="cuke-drawer-header"
      >
        <h2
          class="cuke-drawer-title"
        />
        <svg
          class="cuke-drawer-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-drawer-content"
      >
        <span>
          关闭回调
        </span>
      </section>
    </div>
  </div>
  <div
    class="cuke-drawer-mask cuke-drawer-mask-show"
  />
  <div
    class="cuke-drawer-wrap cuke-drawer-wrap-visible"
    tabindex="-1"
  >
    <div
      class="cuke-drawer cuke-drawer-open cuke-drawer-no-title cuke-drawer-right"
      style="width:300px;height:100%;z-index:999"
    >
      <section
        class="cuke-drawer-header"
      >
        <h2
          class="cuke-drawer-title"
        />
        <svg
          class="cuke-drawer-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-drawer-content"
      >
        <span>
          关闭回调
        </span>
      </section>
    </div>
  </div>
  <div
    class="cuke-drawer-mask cuke-drawer-mask-show"
  />
  <div
    class="cuke-drawer-wrap cuke-drawer-wrap-visible"
    tabindex="-1"
  >
    <div
      class="cuke-drawer cuke-drawer-open cuke-drawer-no-title cuke-drawer-bottom"
      style="width:300px;height:300px;z-index:999"
    >
      <section
        class="cuke-drawer-header"
      >
        <h2
          class="cuke-drawer-title"
        />
        <svg
          class="cuke-drawer-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-drawer-content"
      >
        <span>
          关闭回调
        </span>
      </section>
    </div>
  </div>
</div>
`;
